# mapreduce

./: .gitignore  CMakeLists.txt  Makefile  README.md  dev.env  local.env
CMakeModules/: FindAzureStorageCpp.cmake  FindConservator.cmake
k8s/: Dockerfile  deployment.yml  run.sh
src/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/coordinator/: CMakeLists.txt  coordinator.h
src/utils/zookeeper/: CMakeLists.txt  zkManager.cc  zkManager.h
